remote was added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <button class="three" id="decrementButton">DECREAMENT</button>
 
     <p id="counter"></p>
+    <p> i love coding</p>
 <script src="index.js"></script>
 </body>
 </html>
